
---------------------------------------------------------------------------
Version 2.5.6, October 3, 2018

Introduce checker-qual-android artifact that is just like the checker-qual
artifact, but the qualifiers have classfile retention.  This is useful for
Android projects.

Remove the checker-compat-qual artifact, which was only useful for Java 7,
which the Checker Framework no longer supports.

Closed issues:

2135, 2157, 2158, 2164, 2171.

---------------------------------------------------------------------------
Version 2.5.5, August 30, 2018

Implicit imports (deprecated in November 2014) are no longer supported.

Renamed the testlib Maven artifact to framework-test.

Removed command-line option -AprintErrorStack, which is now the default.
Added -AnoPrintErrorStack to disable it (which should be rare).

Replaced ErrorReporter class with BugInCF and UserError exceptions.

Closed issues:

1999, 2008, 2023, 2029, 2074, 2088, 2098, 2099, 2102, 2107.

---------------------------------------------------------------------------
Version 2.5.4, August 1, 2018

Closed issues:

2030, 2048, 2052, 2059, 2065, 2067, 2073, 2082.

---------------------------------------------------------------------------
Version 2.5.3, July 2, 2018

Closed issues:

266, 1248, 1678, 2010, 2011, 2018, 2020, 2046, 2047, 2054.

---------------------------------------------------------------------------
Version 2.5.2, June 1, 2018

In the Map Key Checker, null is now @UnknownKeyFor.  See the "Map Key Checker"
chapter in the manual for more details.

Closed issues:

370, 469, 1701, 1916, 1922, 1959, 1976, 1978, 1981, 1983, 1984, 1991, 1992.

---------------------------------------------------------------------------
Version 2.5.1, May 1, 2018

Added a Maven artifact of the Checker Framework testing library, testlib.

Closed issues:

849, 1739, 1838, 1847, 1890, 1901, 1911, 1912, 1913, 1934, 1936, 1941, 1942,
1945, 1946, 1948, 1949, 1952, 1953, 1956, 1958.
