@@ -10,7 +10,8 @@ artifact, but the qualifiers have classfile retention.  This is useful for
 Android projects.
 
 Remove the checker-compat-qual artifact, which was only useful for Java 7,
-which the Checker Framework no longer supports.
+which the Checker Framework no longer supports.  It remains available on
+Maven Central, with versions 2.5.5 and earlier.
 
 Closed issues:
 
